v0.6.0:重构记忆模块，基于LLM wiki，将记忆与知识拆分为： 1.Agent操作记忆 2.用户情景记忆 3.用户习惯偏好 4.专业知识库（面向垂直领域） 5.实体关系图谱解析 通过向量化混检wiki统一1+2+4+5，由wiki管理知识的生命周期与权限，版本记录，再进入mysql进行实体权限校验，通过后指向具体向量块或图。记忆与知识检索入口统一收束至wiki检索工具下。 新增了两个记忆提取相关工具。修改先前的知识库检索工具为wiki检索工具，不再显式声明图谱检索工具转为wiki内部函数指向。wiki数据参考Google的OKF范式进行数据结构化导出与传参 （当前图谱与文档上传暂不能生成wiki）
优化了searXNG权重与引擎配置并对版本进行升级，去除pgvector相关配置（实在是没有时间了，不想做了，先把milvus一个搞好吧，而且现在的配置跟设计已经落后好几个版本了）