@@ -1,6 +1,7 @@
 package com.harness.input.memory;
 
 import com.harness.core.model.Session;
+import com.harness.core.model.SessionCursor;
 import com.harness.core.env.EnvConfig;
 import com.harness.core.env.MysqlConnectionPool;
 import org.junit.jupiter.api.*;
@@ -10,7 +11,6 @@ import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
@@ -26,7 +26,7 @@ class MysqlSessionStoreIT {
     @BeforeAll
     static void initEnv() {
         EnvConfig.init(Map.of(
-                "HARNESS_AUDIT_DB_URL", "jdbc:mysql://localhost:3306/agent?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai",
+                "HARNESS_AUDIT_DB_URL", "jdbc:mysql://localhost:3306/zhi_du_yuan?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai",
                 "HARNESS_AUDIT_DB_USER", "root",
                 "HARNESS_AUDIT_DB_PASS", "1234",
                 "HARNESS_AUDIT_STORE", "mysql"
@@ -51,7 +51,7 @@ class MysqlSessionStoreIT {
 
     @Test
     void create_returnsSessionWithId() {
-        Session session = store.create(TEST_USER);
+        Session session = store.create(TEST_USER, null);
 
         assertThat(session.id()).isNotBlank();
         assertThat(session.userId()).isEqualTo(TEST_USER);
@@ -63,9 +63,9 @@ class MysqlSessionStoreIT {
 
     @Test
     void findActive_existing_returnsSession() {
-        Session created = store.create(TEST_USER);
+        Session created = store.create(TEST_USER, null);
 
-        Optional<Session> found = store.findActive(created.id());
+        Optional<Session> found = store.findActiveByOwner(created.id(), TEST_USER, null);
 
         assertThat(found).isPresent();
         assertThat(found.get().id()).isEqualTo(created.id());
@@ -74,20 +74,20 @@ class MysqlSessionStoreIT {
 
     @Test
     void findActive_afterClose_returnsEmpty() {
-        Session created = store.create(TEST_USER);
+        Session created = store.create(TEST_USER, null);
         store.close(created.id(), Session.SessionStatus.ended);
 
-        Optional<Session> found = store.findActive(created.id());
+        Optional<Session> found = store.findActiveByOwner(created.id(), TEST_USER, null);
 
         assertThat(found).isEmpty();
     }
 
     @Test
     void findById_anyStatus_returnsSession() {
-        Session created = store.create(TEST_USER);
+        Session created = store.create(TEST_USER, null);
         store.close(created.id(), Session.SessionStatus.ended);
 
-        Optional<Session> found = store.findById(created.id());
+        Optional<Session> found = store.findByIdAndOwner(created.id(), TEST_USER, null);
 
         assertThat(found).isPresent();
         assertThat(found.get().status()).isEqualTo(Session.SessionStatus.ended);
@@ -95,22 +95,23 @@ class MysqlSessionStoreIT {
 
     @Test
     void findActiveByUser_returnsActiveOnly() {
-        Session s1 = store.create(TEST_USER);
-        Session s2 = store.create(TEST_USER);
+        Session s1 = store.create(TEST_USER, null);
+        Session s2 = store.create(TEST_USER, null);
         store.close(s1.id(), Session.SessionStatus.ended);
 
-        List<Session> active = store.findActiveByUser(TEST_USER);
+        var active = store.findAllByOwner(
+                TEST_USER, null, Session.SessionStatus.active, null, 100).items();
 
         assertThat(active).extracting(Session::id).contains(s2.id()).doesNotContain(s1.id());
     }
 
     @Test
     void close_setsStatusAndEndedAt() {
-        Session created = store.create(TEST_USER);
+        Session created = store.create(TEST_USER, null);
 
         store.close(created.id(), Session.SessionStatus.timeout);
 
-        Optional<Session> found = store.findById(created.id());
+        Optional<Session> found = store.findByIdAndOwner(created.id(), TEST_USER, null);
         assertThat(found).isPresent();
         assertThat(found.get().status()).isEqualTo(Session.SessionStatus.timeout);
         assertThat(found.get().endedAt()).isNotNull();
@@ -118,92 +119,59 @@ class MysqlSessionStoreIT {
 
     @Test
     void updateLastActive_refreshesTimestamp() throws InterruptedException {
-        Session created = store.create(TEST_USER);
+        Session created = store.create(TEST_USER, null);
         Instant before = created.lastActive();
 
         Thread.sleep(50); // small delay to ensure timestamp difference
         store.updateLastActive(created.id());
 
-        Optional<Session> found = store.findActive(created.id());
+        Optional<Session> found = store.findActiveByOwner(created.id(), TEST_USER, null);
         assertThat(found).isPresent();
         assertThat(found.get().lastActive()).isAfterOrEqualTo(before);
     }
 
     @Test
     void updateTitle_setsTitle() {
-        Session created = store.create(TEST_USER);
+        Session created = store.create(TEST_USER, null);
 
         store.updateTitle(created.id(), "Test Title");
 
-        Optional<Session> found = store.findById(created.id());
+        Optional<Session> found = store.findByIdAndOwner(created.id(), TEST_USER, null);
         assertThat(found).isPresent();
         assertThat(found.get().title()).isEqualTo("Test Title");
     }
 
     @Test
     void findAll_withCursorPaginates() {
-        Session s1 = store.create(TEST_USER);
-        Session s2 = store.create(TEST_USER);
+        Session s1 = store.create(TEST_USER, null);
+        Session s2 = store.create(TEST_USER, null);
 
         // First page: limit 1, no cursor
-        List<Session> page1 = store.findAll(TEST_USER, Session.SessionStatus.active, null, 1);
-        assertThat(page1).hasSize(1);
+        var page1 = store.findAllByOwner(TEST_USER, null, Session.SessionStatus.active, null, 1);
+        assertThat(page1.items()).hasSize(1);
 
         // Second page: use last item's createdAt as cursor
-        Instant cursor = page1.get(0).createdAt();
-        List<Session> page2 = store.findAll(TEST_USER, Session.SessionStatus.active, cursor, 10);
-        assertThat(page2).isNotEmpty();
+        Session first = page1.items().getFirst();
+        var page2 = store.findAllByOwner(TEST_USER, null, Session.SessionStatus.active,
+                new SessionCursor(first.lastActive(), first.id()), 10);
+        assertThat(page2.items()).isNotEmpty();
         // page2 items should be before cursor (DESC order)
-        assertThat(page2.get(0).createdAt()).isBeforeOrEqualTo(cursor);
-    }
-
-    @Test
-    void claimForRefinement_firstCall_returnsTrue() {
-        Session created = store.create(TEST_USER);
-        // Default refinement_status is 'none', must set to 'pending' first
-        store.markRefinementStatus(created.id(), "pending");
-
-        boolean claimed = store.claimForRefinement(created.id());
-
-        assertThat(claimed).isTrue();
-    }
-
-    @Test
-    void claimForRefinement_secondCall_returnsFalse() {
-        Session created = store.create(TEST_USER);
-        store.claimForRefinement(created.id());
-
-        boolean secondClaim = store.claimForRefinement(created.id());
-
-        assertThat(secondClaim).isFalse();
-    }
-
-    @Test
-    void markRefinementStatus_andReset() {
-        Session created = store.create(TEST_USER);
-        store.markRefinementStatus(created.id(), "in_progress");
-
-        // Reset to pending
-        store.resetRefinementToPending(created.id());
-
-        // Should be claimable again
-        boolean claimed = store.claimForRefinement(created.id());
-        assertThat(claimed).isTrue();
+        assertThat(page2.items()).extracting(Session::id).doesNotContain(first.id());
     }
 
     @Test
     void findTimedOut_returnsOldActiveSessions() {
         // findTimedOut returns sessions where last_active < now - timeout
         // With a 24-hour timeout, any session created before yesterday qualifies
-        Session created = store.create(TEST_USER);
+        Session created = store.create(TEST_USER, null);
 
         // Use a very large timeout so our just-created session is NOT timed out
-        List<Session> notTimedOut = store.findTimedOut(Duration.ofHours(24));
-        assertThat(notTimedOut).extracting(Session::id).doesNotContain(created.id());
+        var notTimedOut = store.findTimedOut(Duration.ofHours(24), null, 100);
+        assertThat(notTimedOut.items()).extracting(Session::id).doesNotContain(created.id());
 
         // Use 0 timeout so any session with last_active < now qualifies
         // (there may be other sessions, so just check the method doesn't error)
-        List<Session> all = store.findTimedOut(Duration.ZERO);
+        var all = store.findTimedOut(Duration.ZERO, null, 100);
         assertThat(all).isNotNull();
     }
 }
